resolve float left alignment issues by making bellsprout the same size as spoink

--- a/assets/css/pixel_art/bellsprout.css
+++ b/assets/css/pixel_art/bellsprout.css
@@ -1,7 +1,7 @@
 .bellsprout {
     position: relative;
-    width: 32px;
-    height: 32px;
+    width: 36px;
+    height: 36px;
 }
 
 .bellsprout:after, .bellsprout:hover:after {
